Fixed horizontal scroll on mobile because of empty row

--- a/packages/frontend/src/app/pages/leaderboard-page/leaderboard-page.component.scss
+++ b/packages/frontend/src/app/pages/leaderboard-page/leaderboard-page.component.scss
@@ -70,6 +70,7 @@
   width: 100%;
   text-align: center;
   padding: 2rem;
+  box-sizing: border-box;
 }
 
 .twitch-link {
